Don't do bizarre sizing stuff to the root element's frame.  Bug 241694; also fixes bug 15405 and bug 57906.  r+sr=dbaron